# syllabus

./: README.md
tool/: pyproject.toml  requirements.txt  scraping2.py
web/src/data/: 2022.json  2022mini.json
